fix nav z-index

--- a/css/styles.css
+++ b/css/styles.css
@@ -103,6 +103,7 @@ nav {
   top: -1px;
   padding: 2rem 1rem;
   background: #2a2139;
+  z-index: 100;
 }
 
 nav:not(.is-pinned) .link {
